<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsTeleserie">

    <TextView
            android:layout_width="345dp"
            android:layout_height="33dp" android:id="@+id/txtTitle"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Test" android:contentDescription="@string/title"
            android:textAlignment="center" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.073" android:textSize="24sp"/>
    <TextView
            android:text="@string/txtPlot"
            android:layout_width="346dp"
            android:layout_height="261dp" android:id="@+id/txtPlot"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:textAlignment="textStart" android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.492"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.126"/>
    <TextView
            android:text="@string/txtStudio"
            android:layout_width="262dp"
            android:layout_height="wrap_content" android:id="@+id/txtStudio"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/txtPlot"
            android:layout_marginTop="108dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="32dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/txtGenres"
            android:layout_width="262dp"
            android:layout_height="wrap_content" android:id="@+id/txtGenres"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtStudio" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.409" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.785"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/studio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblStudio"
            app:layout_constraintTop_toBottomOf="@+id/txtPlot"
            android:layout_marginTop="108dp" app:layout_constraintEnd_toStartOf="@+id/txtStudio"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0" android:textSize="20sp"/>
    <TextView
            android:text="@string/genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/lblGenres"
            app:layout_constraintEnd_toStartOf="@+id/txtGenres" android:layout_marginEnd="28dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.402" app:layout_constraintTop_toBottomOf="@+id/lblStudio"
            android:textSize="20sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
